--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ cycler==0.12.1
 filelock==3.13.1
 fonttools==4.54.1
 fsspec==2024.2.0
+geographiclib==2.0
+geopy==2.4.1
 Jinja2==3.1.3
 joblib==1.4.2
 kiwisolver==1.4.7
