--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+certifi==2024.8.30
 contourpy==1.3.0
 cycler==0.12.1
 filelock==3.13.1
 fonttools==4.54.1
 fsspec==2024.2.0
 geographiclib==2.0
+geopandas==1.0.1
 geopy==2.4.1
 Jinja2==3.1.3
 joblib==1.4.2
@@ -16,17 +18,20 @@ numpy==2.1.1
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
+pyogrio==0.10.0
 pyparsing==3.1.4
+pyproj==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 scikit-learn==1.5.2
 scipy==1.14.1
 setuptools==70.0.0
+shapely==2.0.6
 six==1.16.0
 sympy==1.12
 threadpoolctl==3.5.0
-torch==2.4.1+cu124
-torchaudio==2.4.1+cu124
-torchvision==0.19.1+cu124
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
 typing_extensions==4.9.0
 tzdata==2024.2
