--- a/requirements.txt
+++ b/requirements.txt
@@ -30,8 +30,9 @@ shapely==2.0.6
 six==1.16.0
 sympy==1.12
 threadpoolctl==3.5.0
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
+torch==2.4.1+cu124
+torchaudio==2.4.1+cu124
+torchvision==0.19.1+cu124
 typing_extensions==4.9.0
 tzdata==2024.2
+xgboost==2.1.1
